implemented get, get_one, update_one.
